force-app/main/default/objects/E2C_Creation_Rules__mdt/E2C_Creation_Rules__mdt.object-meta.xml
<CustomObject>
    <description>Email to Case Blocking scenarios where a case creation must be blocked within salesforce.</description>
    <label>E2C Creation Rules</label>
    <pluralLabel>E2C Creation Rules</pluralLabel>
</CustomObject>