force-app/main/default/objects/E2C_Creation_Rules__mdt/fields/E2C_Creation_Scenarios__c.field-meta.xml
<CustomField>
    <fullName>E2C_Creation_Scenarios__c</fullName>
    <label>E2C Creation Scenarios</label>
    <referenceTo>E2C_Creation_Scenarios__mdt</referenceTo>
    <relationshipName>E2C_Allow_Rules</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>