force-app/main/default/objects/E2C_Creation_Rules__mdt/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <label>Field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sender</fullName>
                <default>true</default>
                <label>Sender</label>
            </value>
            <value>
                <fullName>To Recipients</fullName>
            </value>
            <value>
                <fullName>Subject</fullName>
            </value>
            <value>
                <fullName>Direction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>