force-app/main/default/objects/E2C_Creation_Rules__mdt/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Does Not Contain</fullName>
                <default>true</default>
                <label>Does Not Contain</label>
            </value>
            <value>
                <fullName>Not Equals To</fullName>
            </value>
            <value>
                <fullName>Equals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>