force-app/main/default/objects/E2C_Creation_Rules__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>DeveloperName</columns>
    <columns>E2C_Creation_Scenarios__c</columns>
    <columns>MasterLabel</columns>
    <columns>Field__c</columns>
    <columns>Operator__c</columns>
    <columns>Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
</ListView>